CHROMIUM: config: enable CONFIG_DEBUG_NOTIFIERS
We're planning on using this plus another patch to debug a kernel
crash involving a notifier.

BUG=chromium:345917
TEST=`emerge-daisy chromeos-kernel-next`

Change-Id: I7c71ac3e20bc421ddd0b4910f82b792275d15fc9
Signed-off-by: Sonny Rao <sonnyrao@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/187789
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -340,7 +340,7 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
 # CONFIG_DEBUG_MUTEXES is not set
-# CONFIG_DEBUG_NOTIFIERS is not set
+CONFIG_DEBUG_NOTIFIERS=y
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_DEBUG_PAGEALLOC is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
