CHROMIUM: CONFIG: Renormalize configs
Renormalize the configs

BUG=chrome-os-partner:26276
TEST=Build kernel

Change-Id: I1ce87cae58a51e2187650fa3c266be59e86e3f56
Signed-off-by: Alim Akhtar <alim.akhtar@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/188147
Reviewed-by: Prathyush Kalashwaram <prathyushk.samsung@gmail.com>
Tested-by: Prathyush Kalashwaram <prathyushk.samsung@gmail.com>
Reviewed-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>

--- a/chromeos/config/armel/common.config
+++ b/chromeos/config/armel/common.config
@@ -77,6 +77,7 @@ CONFIG_ARM_L1_CACHE_SHIFT_6=y
 CONFIG_ARM_NR_BANKS=8
 CONFIG_ARM_PATCH_PHYS_VIRT=y
 CONFIG_ARM_PLATFORM_DEVICES=y
+# CONFIG_ARM_PTDUMP is not set
 CONFIG_ARM_THUMB=y
 CONFIG_ARM_THUMBEE=y
 CONFIG_ARM_UNWIND=y
@@ -142,7 +143,6 @@ CONFIG_DEBUG_LL=y
 # CONFIG_DEBUG_LL_UART_NONE is not set
 # CONFIG_DEBUG_PINCTRL is not set
 # CONFIG_DEBUG_SEMIHOSTING is not set
-CONFIG_DEBUG_SET_MODULE_RONX=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_DM9000 is not set
@@ -219,6 +219,7 @@ CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MODULES_USE_ELF_REL=y
 # CONFIG_MOUSE_APPLETOUCH is not set
 # CONFIG_MOUSE_BCM5974 is not set
+# CONFIG_MOUSE_ELAN_I2C is not set
 # CONFIG_MOUSE_PS2 is not set
 # CONFIG_MOUSE_SYNAPTICS_USB is not set
 CONFIG_MULTI_IRQ_HANDLER=y
