--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -344,12 +344,14 @@ CONFIG_DEBUG_NOTIFIERS=y
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
 # CONFIG_DEBUG_RT_MUTEXES is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
+CONFIG_DEBUG_SET_MODULE_RONX=y
 # CONFIG_DEBUG_SG is not set
 # CONFIG_DEBUG_SHIRQ is not set
 CONFIG_DEBUG_SPINLOCK=y
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_VM is not set
 # CONFIG_DEBUG_WRITECOUNT is not set
+# CONFIG_DEBUG_WW_MUTEX_SLOWPATH is not set
 # CONFIG_DECNET is not set
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_DECOMPRESS_XZ=y
@@ -467,6 +469,7 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_UVESA is not set
 # CONFIG_FB_VIRTUAL is not set
 # CONFIG_FB_WMT_GE_ROPS is not set
+# CONFIG_FENCE_TRACE is not set
 # CONFIG_FHANDLE is not set
 CONFIG_FILE_LOCKING=y
 # CONFIG_FIRMWARE_EDID is not set
