--- a/chromeos/config/i386/common.config
+++ b/chromeos/config/i386/common.config
@@ -205,7 +205,6 @@ CONFIG_DEBUG_BOOT_PARAMS=y
 CONFIG_DEBUG_NX_TEST=m
 CONFIG_DEBUG_RODATA=y
 # CONFIG_DEBUG_RODATA_TEST is not set
-CONFIG_DEBUG_SET_MODULE_RONX=y
 CONFIG_DEBUG_STACKOVERFLOW=y
 # CONFIG_DEBUG_STRICT_USER_COPY_CHECKS is not set
 # CONFIG_DEBUG_VIRTUAL is not set
@@ -552,6 +551,7 @@ CONFIG_MMC_SDHCI_PCI=m
 # CONFIG_MMIOTRACE is not set
 CONFIG_MODULES_USE_ELF_REL=y
 CONFIG_MOUSE_APPLETOUCH=m
+# CONFIG_MOUSE_ELAN_I2C is not set
 CONFIG_MOUSE_PS2=y
 CONFIG_MOUSE_PS2_ALPS=y
 CONFIG_MOUSE_PS2_ELANTECH=y
