--- a/arch/arm/boot/dts/exynos542x-peach.dtsi
+++ b/arch/arm/boot/dts/exynos542x-peach.dtsi
@@ -747,8 +747,8 @@
 				};
 				ldo30_reg: LDO30 {
 					regulator-name = "vdd_mifs";
-					regulator-min-microvolt = <900000>;
-					regulator-max-microvolt = <1300000>;
+					regulator-min-microvolt = <1000000>;
+					regulator-max-microvolt = <1000000>;
 					regulator-op-mode = <1>;
 					regulator-always-on;
 				};
