--- a/drivers/net/wireless/iwlwifi/Kconfig
+++ b/drivers/net/wireless/iwlwifi/Kconfig
@@ -1,6 +1,7 @@
 config IWLWIFI
 	tristate "Intel Wireless WiFi Next Gen AGN - Wireless-N/Advanced-N/Ultimate-N (iwlwifi) "
-	depends on PCI && MAC80211 && HAS_IOMEM
+	# IWL7000 conflicts but must have precedence
+	depends on PCI && MAC80211 && HAS_IOMEM && IWL7000=n
 	select FW_LOADER
 	select NEW_LEDS
 	select LEDS_CLASS
