CHROMIUM: CONFIG: Renormalize configs
Renormalize the configs

BUG=chrome-os-partner:23189, chrome-os-partner:25419
TEST=Build kernel

Change-Id: I4d2d2ec7c9e8955ab559b4fd609196c91438b79a
Signed-off-by: Naveen Krishna Chatradhi <ch.naveen@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/191823
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>
Commit-Queue: Sonny Rao <sonnyrao@chromium.org>
Tested-by: Sonny Rao <sonnyrao@chromium.org>

--- a/chromeos/config/armel/common.config
+++ b/chromeos/config/armel/common.config
@@ -89,7 +89,12 @@ CONFIG_ATAGS=y
 CONFIG_BOOTPARAM_HARDLOCKUP_PANIC=y
 CONFIG_BOOTPARAM_HARDLOCKUP_PANIC_VALUE=1
 # CONFIG_BPF_JIT is not set
-# CONFIG_BRCMFMAC is not set
+CONFIG_BRCMDBG=y
+CONFIG_BRCMFMAC=m
+CONFIG_BRCMFMAC_SDIO=y
+# CONFIG_BRCMFMAC_USB is not set
+CONFIG_BRCMUTIL=m
+CONFIG_BRCM_TRACING=y
 # CONFIG_BROADCOM_PHY is not set
 # CONFIG_BT_ATH3K is not set
 # CONFIG_BT_HCIBCM203X is not set
@@ -362,10 +367,3 @@ CONFIG_ZBOOT_ROM_BSS=0x0
 CONFIG_ZBOOT_ROM_TEXT=0x0
 # CONFIG_ZD1211RW is not set
 CONFIG_ZONE_DMA_FLAG=0
-#
-# brcmfmac wireless driver
-#
-CONFIG_BRCMFMAC=m
-CONFIG_BRCMFMAC_SDIO=y
-CONFIG_BRCM_TRACING=y
-CONFIG_BRCMDBG=y
