--- a/chromeos/config/armel/common.config
+++ b/chromeos/config/armel/common.config
@@ -71,6 +71,7 @@ CONFIG_ARM_ERRATA_798181=y
 # CONFIG_ARM_EXYNOS4210_CPUFREQ is not set
 # CONFIG_ARM_EXYNOS4X12_CPUFREQ is not set
 CONFIG_ARM_GIC=y
+CONFIG_ARM_KERNMEM_PERMS=y
 CONFIG_ARM_L1_CACHE_SHIFT=6
 CONFIG_ARM_L1_CACHE_SHIFT_6=y
 # CONFIG_ARM_LPAE is not set
@@ -147,6 +148,7 @@ CONFIG_CPU_V7=y
 CONFIG_DEBUG_LL=y
 # CONFIG_DEBUG_LL_UART_NONE is not set
 # CONFIG_DEBUG_PINCTRL is not set
+CONFIG_DEBUG_RODATA=y
 # CONFIG_DEBUG_SEMIHOSTING is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
