regulator: virtual: Introduce a new virtual locker regulator type
On some SoCs there could be requirements that two or more voltage
regulators need to maintain certain skew for proper functioning.

This patch implements a new vitual locker type regulator which can
have multiple output and input regulators. The real regulators will
be hidden under the virtual output regulators. The consumer of the
real regulators need not change anything.

BUG=chrome-os-partner:26245
TEST=boot pi, run video and see that INT and ARM voltages
are being changed and they are never out of skew

Change-Id: I534c4bff00edf36d1baa92a9ac639cfef3fc0fd8
Signed-off-by: Doug Anderson <dianders@chromium.org>
Signed-off-by: Inderpal Singh <inderpal.s@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/200999
Tested-by: Arjun K V <arjun.kv@samsung.com>
Reviewed-by: Akshu Agrawal <akshu@chromium.org>
Commit-Queue: Arjun K V <arjun.kv@samsung.com>

--- a/drivers/devfreq/Kconfig
+++ b/drivers/devfreq/Kconfig
@@ -94,6 +94,7 @@ config ARM_EXYNOS5420_BUS_DEVFREQ
 	select ARCH_HAS_OPP
 	select PM_OPP
 	select DEVFREQ_GOV_SIMPLE_ONDEMAND
+	select REGULATOR_LOCKER_VOLTAGE
 	help
 	  This adds the DEVFREQ driver for Exynos5420 bus interface.
 
