--- a/arch/arm/mach-exynos/Kconfig
+++ b/arch/arm/mach-exynos/Kconfig
@@ -69,6 +69,7 @@ config SOC_EXYNOS5250
 	select SAMSUNG_DMADEV
 	select EXYNOS5_SETUP_FIMD1
 	select ARM_ERRATA_773769
+	select ARM_ARCH_TIMER
 	help
 	  Enable EXYNOS5250 SoC support
 
