CHROMIUM: config: enable udelay_test for autotest
BUG=chromium:352391
TEST='test_that kernel_Delay'

Change-Id: Id16c0eca6076a19c9dbcaf1906117158e93c8324
Signed-off-by: David Riley <davidriley@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/194222
Reviewed-by: Doug Anderson <dianders@chromium.org>

--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -1813,6 +1813,7 @@ CONFIG_TSL2583=m
 CONFIG_TUN=m
 # CONFIG_TWL4030_CORE is not set
 # CONFIG_TWL6040_CORE is not set
+CONFIG_UDELAY_TEST=m
 CONFIG_UDF_FS=m
 CONFIG_UDF_NLS=y
 CONFIG_UEVENT_HELPER_PATH=""
