ARM: dts: Allow for 2 extra battery retries for cros-exynos devices
It doesn't appear to be too hard to get our batteries in a state where
they will just NAK us once.  Let's add some retries.  Although we've
only been able to replicate problems easily in the snow kernel, add it
to other similar exynos devices just to be safe.

BUG=chromium:362690
TEST=suspend_stress_test is more solid now
TEST=Add kernel printouts and see retries working after NAKs.

Change-Id: I2be36058ed6429bc15fb0869f580a2a2c7cc4890
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/194387
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/arch/arm/boot/dts/exynos542x-peach.dtsi
+++ b/arch/arm/boot/dts/exynos542x-peach.dtsi
@@ -500,6 +500,7 @@
 					compatible = "sbs,sbs-battery";
 					reg = <0xb>;
 					sbs,poll-retry-count = <1>;
+					sbs,i2c-retry-count = <2>;
 				};
 			};
 
