--- a/arch/arm/boot/dts/exynos5250-snow.dtsi
+++ b/arch/arm/boot/dts/exynos5250-snow.dtsi
@@ -251,6 +251,7 @@
 				compatible = "sbs,sbs-battery";
 				reg = <0xb>;
 				sbs,poll-retry-count = <1>;
+				sbs,i2c-retry-count = <2>;
 			};
 		};
 	};
