arm: dts: exynos542x: add int locker regulator node
Add the locker regulator node for  pit and pi.

BUG=chrome-os-partner:26245
TEST=boot pi and play some video

Change-Id: I46c327fe20b15b5dbf21be289795d8391c5a5029
Signed-off-by: Inderpal Singh <inderpal.s@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/201040
Tested-by: Arjun K V <arjun.kv@samsung.com>
Reviewed-by: Akshu Agrawal <akshu@chromium.org>
Commit-Queue: Arjun K V <arjun.kv@samsung.com>

--- a/arch/arm/boot/dts/exynos5422-peach-pi.dts
+++ b/arch/arm/boot/dts/exynos5422-peach-pi.dts
@@ -22,4 +22,27 @@
 		"google,pi-rev13", "google,pi-rev12",
 		"google,pi-rev11", "google,pi-rev10",
 		"google,pi", "google,peach", "samsung,exynos5422";
+
+	int-voltage-locker {
+		compatible = "regulator-locker";
+		vin1-supply = <&buck2_reg>; /* vdd_arm_real */
+		vin2-supply = <&buck3_reg>; /* vdd_int_real */
+		maximum-spread = <300000>;
+		locker-regulators {
+			vout1 {
+				regulator-name = "vdd_arm";
+				regulator-min-microvolt = <800000>;
+				regulator-max-microvolt = <1500000>;
+				regulator-always-on;
+				regulator-boot-on;
+			};
+			vout2 {
+				regulator-name = "vdd_int";
+				regulator-min-microvolt = <800000>;
+				regulator-max-microvolt = <1400000>;
+				regulator-always-on;
+				regulator-boot-on;
+			};
+		};
+	};
 };
