--- a/arch/arm/boot/dts/exynos5420-peach-pit.dts
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dts
@@ -24,4 +24,27 @@
 		"google,pit-rev9", "google,pit-rev8",
 		"google,pit-rev7", "google,pit-rev6",
 		"google,pit", "google,peach", "samsung,exynos5420";
+
+	int-voltage-locker {
+		compatible = "regulator-locker";
+		vin1-supply = <&buck2_reg>; /* vdd_arm_real */
+		vin2-supply = <&buck3_reg>; /* vdd_int_real */
+		maximum-spread = <350000>;
+		locker-regulators {
+			vout1 {
+				regulator-name = "vdd_arm";
+				regulator-min-microvolt = <800000>;
+				regulator-max-microvolt = <1500000>;
+				regulator-always-on;
+				regulator-boot-on;
+			};
+			vout2 {
+				regulator-name = "vdd_int";
+				regulator-min-microvolt = <800000>;
+				regulator-max-microvolt = <1400000>;
+				regulator-always-on;
+				regulator-boot-on;
+			};
+		};
+	};
 };
