--- a/arch/arm/boot/dts/exynos542x-peach.dtsi
+++ b/arch/arm/boot/dts/exynos542x-peach.dtsi
@@ -790,7 +790,7 @@
 					regulator-ramp-delay = <12500>;
 				};
 				buck2_reg: BUCK2 {
-					regulator-name = "vdd_arm";
+					regulator-name = "vdd_arm_real";
 					regulator-min-microvolt = <800000>;
 					regulator-max-microvolt = <1500000>;
 					regulator-always-on;
@@ -799,7 +799,7 @@
 					regulator-ramp-delay = <12500>;
 				};
 				buck3_reg: BUCK3 {
-					regulator-name = "vdd_int";
+					regulator-name = "vdd_int_real";
 					regulator-min-microvolt = <800000>;
 					regulator-max-microvolt = <1400000>;
 					regulator-always-on;
