CHROMIUM: fence and reservation based mali-exynos synchronization
Replace KDS based synchronization with fences and reservation objects for
CRTC page flips, CPU acquire/release and Mali driver external resources.
Add exynos_fence objects which are simple software implementation of fences.
Add reservation_cb objects that can collect fences from multiple reservation
objects and implement synchronous and asynchronous wait on them.

BUG=chromium:340541
TEST=run webgl aquarium and big buck bunny in two windows side by side

Change-Id: I4187aa4aff0ac4a8fad6a53503101a598f93a22a
Signed-off-by: Dominik Behr <dbehr@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/202796
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Reviewed-by: John Einar Reitan <john.reitan@arm.com>

--- a/drivers/gpu/drm/Kconfig
+++ b/drivers/gpu/drm/Kconfig
@@ -69,6 +69,13 @@ config DRM_KMS_CMA_HELPER
 	help
 	  Choose this if you need the KMS CMA helper functions
 
+config DRM_DMA_SYNC
+	bool "DRM DMA Sync"
+	depends on DRM && !DMA_SHARED_BUFFER_USES_KDS
+	help
+	  Choose this option if you want to use fences and reservations for
+	  synchronization of shared dma-buf access between different drivers.
+
 config DRM_TDFX
 	tristate "3dfx Banshee/Voodoo3+"
 	depends on DRM && PCI
