--- a/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
+++ b/arch/arm/boot/dts/exynos5420-peach-pit.dtsi
@@ -86,4 +86,27 @@
 	sound {
 		compatible = "google,daisy-audio-max98090";
 	};
+
+	int-voltage-locker {
+		compatible = "regulator-locker";
+		vin1-supply = <&buck2_reg>; /* vdd_arm_real */
+		vin2-supply = <&buck3_reg>; /* vdd_int_real */
+		maximum-spread = <350000>;
+		locker-regulators {
+			vout1 {
+				regulator-name = "vdd_arm";
+				regulator-min-microvolt = <800000>;
+				regulator-max-microvolt = <1500000>;
+				regulator-always-on;
+				regulator-boot-on;
+			};
+			vout2 {
+				regulator-name = "vdd_int";
+				regulator-min-microvolt = <800000>;
+				regulator-max-microvolt = <1400000>;
+				regulator-always-on;
+				regulator-boot-on;
+			};
+		};
+	};
 };
