CHROMIUM: config: enable reservation and fence sync for Exynos and Mali
Kernel config change to disable KDS based sync and enable reservation and
fence based sync.

BUG=chromium:340541
TEST=run webgl aquarium and big buck bunny in two windows side by side

Change-Id: If34384434bfcc9ac45a0d6dba5946ab0c370a5c6
Signed-off-by: Dominik Behr <dbehr@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/206595

--- a/chromeos/config/armel/chromeos-exynos5.flavour.config
+++ b/chromeos/config/armel/chromeos-exynos5.flavour.config
@@ -88,7 +88,7 @@ CONFIG_DMADEVICES=y
 # CONFIG_DMATEST is not set
 CONFIG_DMA_ENGINE=y
 CONFIG_DMA_OF=y
-CONFIG_DMA_SHARED_BUFFER_USES_KDS=y
+# CONFIG_DMA_SHARED_BUFFER_USES_KDS is not set
 CONFIG_DRM=y
 CONFIG_DRM_ANX7808=y
 CONFIG_DRM_EXYNOS=y
@@ -101,6 +101,7 @@ CONFIG_DRM_EXYNOS_HDMI=y
 CONFIG_DRM_EXYNOS_IOMMU=y
 # CONFIG_DRM_EXYNOS_IPP is not set
 CONFIG_DRM_EXYNOS_VIDI=y
+CONFIG_DRM_DMA_SYNC=y
 # CONFIG_DRM_I2C_CH7006 is not set
 # CONFIG_DRM_I2C_SIL164 is not set
 CONFIG_DRM_KMS_HELPER=y
@@ -147,7 +148,7 @@ CONFIG_I2C_S3C2410=y
 CONFIG_IIO=y
 # CONFIG_INPUT_PWM_BEEPER is not set
 CONFIG_IOMMU_API=y
-CONFIG_KDS=y
+# CONFIG_KDS is not set
 CONFIG_KEYBOARD_CROS_EC=y
 # CONFIG_KS8842 is not set
 # CONFIG_LCD_AMS369FG06 is not set
