drm/exynos: Remove exynos_drm_manager & exynos_drm_crtc
Using the new exynos_plane_helper funcs, we can implement fimd/mixer/vidi
as proper drm_crtc's with primary plane.

BUG=chromium:336809
TEST=Tested on snow & peach_pit

Change-Id: I2f4786df62afeadecefa7d0869b2d741f6fab190
Signed-off-by: Sean Paul <seanpaul@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/202111

--- a/drivers/gpu/drm/exynos/Makefile
+++ b/drivers/gpu/drm/exynos/Makefile
@@ -4,7 +4,7 @@
 
 ccflags-y := -Iinclude/drm -Idrivers/gpu/drm/exynos
 exynosdrm-y := exynos_drm_drv.o exynos_drm_encoder.o \
-		exynos_drm_crtc.o exynos_drm_fbdev.o exynos_drm_fb.o \
+		exynos_drm_fbdev.o exynos_drm_fb.o \
 		exynos_drm_buf.o exynos_drm_gem.o exynos_drm_core.o \
 		exynos_drm_plane.o exynos_trace_points.o
 
