CHROMIUM: config: remove CONFIG_KDS from i386 and x86_64 common configs
It is only needed for Exynos5 config.

BUG=none
TEST=build kernel for Link

Change-Id: I1a22bcc0fc23a8054c5ab9dcafeb231aec870300
Signed-off-by: Dominik Behr <dbehr@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/204420
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>

--- a/chromeos/config/i386/common.config
+++ b/chromeos/config/i386/common.config
@@ -477,7 +477,7 @@ CONFIG_ITCO_WDT=y
 # CONFIG_IXGBE is not set
 # CONFIG_IXGBEVF is not set
 CONFIG_JME=m
-CONFIG_KDS=y
+# CONFIG_KDS is not set
 # CONFIG_KERNEL_BZIP2 is not set
 CONFIG_KTIME_SCALAR=y
 # CONFIG_KVM is not set
