--- a/chromeos/config/x86_64/common.config
+++ b/chromeos/config/x86_64/common.config
@@ -498,7 +498,7 @@ CONFIG_ITCO_WDT=y
 # CONFIG_IXGBE is not set
 # CONFIG_IXGBEVF is not set
 CONFIG_JME=m
-CONFIG_KDS=y
+# CONFIG_KDS is not set
 # CONFIG_KERNEL_BZIP2 is not set
 # CONFIG_KEYBOARD_CROS_EC is not set
 CONFIG_KEYS_COMPAT=y
