CHROMIUM: make DMA_SHARED_BUFFER_USES_KDS select KDS and DMA_SHARED_BUFFER
Required to make DMA_SHARED_BUFFER_USES_KDS optional in DRM_EXYNOS.
Without it changing "select DMA_SHARED_BUFFER_USES_KDS" to
"depends DMA_SHARED_BUFFER_USES_KDS" under DRM_EXYNOS causes recursive
dependency warning during build.

BUG=none
TEST=build chromeos-kernel-3_8 on daisy or peach_pi(t)

Change-Id: I53f2d738c5cf025c5b18c2f816e2e274a01418b2
Signed-off-by: Dominik Behr <dbehr@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/205503
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Reviewed-by: Daniel Kurtz <djkurtz@chromium.org>

--- a/drivers/base/Kconfig
+++ b/drivers/base/Kconfig
@@ -301,7 +301,8 @@ endif
 
 config DMA_SHARED_BUFFER_USES_KDS
 	bool "Add KDS resource within every dma_buf allocation"
-	depends on DMA_SHARED_BUFFER && KDS
+	select DMA_SHARED_BUFFER
+	select KDS
 	default n
 	help
 	  This option adds a KDS resource within every dma_buf allocation.
