--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -1480,8 +1480,10 @@ CONFIG_SCSI_DMA=y
 # CONFIG_SCSI_FC_ATTRS is not set
 # CONFIG_SCSI_ISCSI_ATTRS is not set
 # CONFIG_SCSI_LOGGING is not set
+CONFIG_SCSI_LOWLEVEL=y
 CONFIG_SCSI_MOD=y
 CONFIG_SCSI_MULTI_LUN=y
+CONFIG_SCSI_VIRTIO=y
 # CONFIG_SCSI_NETLINK is not set
 # CONFIG_SCSI_OSD_INITIATOR is not set
 CONFIG_SCSI_PROC_FS=y
@@ -2039,7 +2041,9 @@ CONFIG_VIDEOBUF2_VMALLOC=m
 # CONFIG_VIDEO_MEM2MEM_TESTDEV is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
 CONFIG_VIDEO_VIVI=m
+CONFIG_VIRTIO=y
 # CONFIG_VIRTIO_MMIO is not set
+CONFIG_VIRTIO_PCI=y
 # CONFIG_VIRT_DRIVERS is not set
 CONFIG_VIRT_TO_BUS=y
 # CONFIG_VITESSE_PHY is not set
