--- a/chromeos/config/x86_64/chromeos-intel-pineview.flavour.config
+++ b/chromeos/config/x86_64/chromeos-intel-pineview.flavour.config
@@ -19,7 +19,7 @@ CONFIG_IWL7000=m
 CONFIG_IWL7000_DEBUGFS=y
 CONFIG_IWL7000_TESTMODE=y
 CONFIG_IWL7000_TRACING=y
-# CONFIG_IWL7000_XVT is not set
+CONFIG_IWL7000_XVT=m
 # CONFIG_IWLWIFI is not set
 # CONFIG_MOUSE_BCM5974 is not set
 # CONFIG_MOUSE_SYNAPTICS_USB is not set
