--- a/chromeos/config/armel/chromeos-exynos5.flavour.config
+++ b/chromeos/config/armel/chromeos-exynos5.flavour.config
@@ -108,7 +108,7 @@ CONFIG_DRM_KMS_HELPER=y
 # CONFIG_DRM_LOAD_EDID_FIRMWARE is not set
 CONFIG_DRM_PS8622=y
 CONFIG_DRM_PTN3460=y
-# CONFIG_DRM_UDL is not set
+CONFIG_DRM_UDL=y
 # CONFIG_DW_DMAC is not set
 # CONFIG_DW_WATCHDOG is not set
 CONFIG_EXYNOS5_SETUP_FIMD1=y
