CHROMIUM: arm: dts: Enable JPEG on Exynos542x
BUG=chrome-os-partner:33364
TEST=With all the patches in the series run the decoder JPEG test
	./test-jpeg -m 1 -f [input jpeg file] -o [output file]
		-v [decoder node]  -r [format] -s 1
	where:
		format should be a value from 0 to 9

Change-Id: I676660d19bdcb01565c175f910efb2709962b6a1
Signed-off-by: Tony K Nadackal <tony.kn@samsung.com>
Signed-off-by: Abhilash Kesavan <a.kesavan@samsung.com>
Reviewed-on: https://chromium-review.googlesource.com/226234
Reviewed-by: Wu-Cheng Li <wuchengli@chromium.org>
Commit-Queue: Wei-Ning Huang <wnhuang@chromium.org>
Tested-by: Wei-Ning Huang <wnhuang@chromium.org>

--- a/arch/arm/boot/dts/exynos542x.dtsi
+++ b/arch/arm/boot/dts/exynos542x.dtsi
@@ -1006,4 +1006,22 @@
 		clock-names = "watchdog";
 		samsung,syscon-phandle = <&pmu_syscon>;
         };
+
+	jpeg_codec@11F50000 {
+		compatible = "samsung,exynos3250-jpeg";
+		reg = <0x11F50000 0x1000>;
+		interrupts = <0 89 0>;
+		clocks = <&clock 451>;
+		clock-names = "jpeg";
+		status = "ok";
+	};
+
+	jpeg_codec@11F60000 {
+		compatible = "samsung,exynos3250-jpeg";
+		reg = <0x11F60000 0x1000>;
+		interrupts = <0 168 0>;
+		clocks = <&clock 452>;
+		clock-names = "jpeg";
+		status = "ok";
+	};
 };
