--- a/arch/arm/boot/dts/exynos5250.dtsi
+++ b/arch/arm/boot/dts/exynos5250.dtsi
@@ -199,6 +199,15 @@
 		samsung,power-domain = <&mfc_pd>;
 	};
 
+	jpeg_codec@11E00000 {
+		compatible = "samsung,exynos4210-jpeg";
+		reg = <0x11E00000 0x1000>;
+		interrupts = <0 89 0>;
+		clocks = <&clock 145>, <&clock 270>;
+		clock-names = "sclk", "jpeg";
+		status = "ok";
+	};
+
 	rtc {
 		compatible = "samsung,s3c6410-rtc";
 		reg = <0x101E0000 0x100>;
@@ -679,12 +688,6 @@
 	rot_pd: pd@0x10042EE0 {
 		compatible = "samsung,exynos4210-pd";
 		reg = <0x10042EE0 0x20>;
-		enable = <0x3>;
-	};
-
-	jpeg_pd: pd@0x10042F40 {
-		compatible = "samsung,exynos4210-pd";
-		reg = <0x10042F40 0x20>;
 		enable = <0x3>;
 	};
 
