CHROMIUMOS: mac80211: Allow IE injection
Allow userspace to append an un-validated footer to the IEs
sent in outgoing beacons in AP mode.  Used to duplciate AP
behavior in testing scenarios.

Signed-off-by: Paul Stewart <pstew@chromium.org>

BUG=chrome-os-partner:33662
TEST=Upcoming autotests + Manual: Start hostapd and use
over-the-air capture to display beacons while changing the
content of /sys/kernel/debug/ieee80211/phy0/beacon_footer

Change-Id: I992c1c8466edcb191358724ea9c2067f85863985
Reviewed-on: https://chromium-review.googlesource.com/232362
Reviewed-by: Peter Qiu <zqiu@chromium.org>
Commit-Queue: Paul Stewart <pstew@chromium.org>
Tested-by: Paul Stewart <pstew@chromium.org>

--- a/net/mac80211/Kconfig
+++ b/net/mac80211/Kconfig
@@ -280,3 +280,12 @@ config MAC80211_DEBUG_COUNTERS
 	  and show them in debugfs.
 
 	  If unsure, say N.
+
+config MAC80211_BEACON_FOOTER
+	bool "User-space configurable beaconf ooter"
+	---help---
+	  Say Y, if you want to allow user-space to configure arbitrary
+	  (unvalidated) data at the end of the beacon information elements.
+	  This is used to test client handling of broken beacons.
+
+	  If unsure, say N.
