--- a/chromeos/config/armel/chromeos-exynos5.flavour.config
+++ b/chromeos/config/armel/chromeos-exynos5.flavour.config
@@ -49,6 +49,7 @@ CONFIG_BATTERY_SBS=m
 CONFIG_BIG_LITTLE=y
 CONFIG_BL_SWITCHER=y
 CONFIG_BL_SWITCHER_DUMMY_IF=y
+CONFIG_BT_BNEP=m
 CONFIG_BT_MRVL=m
 CONFIG_BT_MRVL_SDIO=m
 # CONFIG_CACHE_L2X0 is not set
