Add docker support to default exynos5 config

--- a/chromeos/config/armel/chromeos-exynos5.flavour.config
+++ b/chromeos/config/armel/chromeos-exynos5.flavour.config
@@ -53,6 +53,9 @@ CONFIG_BT_BNEP=m
 CONFIG_BT_MRVL=m
 CONFIG_BT_MRVL_SDIO=m
 # CONFIG_CACHE_L2X0 is not set
+CONFIG_CGROUP_CPUACCT=y
+CONFIG_CGROUP_DEVICE=y
+CONFIG_CGROUP_PERF=y
 # CONFIG_CHARGER_BQ24735 is not set
 CONFIG_CHARGER_CROS_EC=y
 CONFIG_CHARGER_TPS65090=y
@@ -83,6 +86,7 @@ CONFIG_DEBUG_USER=y
 # CONFIG_DEVFREQ_GOV_POWERSAVE is not set
 CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
 # CONFIG_DEVFREQ_GOV_USERSPACE is not set
+CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
 CONFIG_DISPLAY_TIMING=y
 CONFIG_DMADEVICES=y
 # CONFIG_DMADEVICES_DEBUG is not set
@@ -90,6 +94,7 @@ CONFIG_DMADEVICES=y
 CONFIG_DMA_ENGINE=y
 CONFIG_DMA_OF=y
 CONFIG_DMA_SHARED_BUFFER_USES_KDS=y
+CONFIG_DM_THIN_PROVISIONING=y
 CONFIG_DRM=y
 CONFIG_DRM_ANX7808=y
 CONFIG_DRM_EXYNOS=y
@@ -164,6 +169,7 @@ CONFIG_LCD_PLATFORM=y
 # CONFIG_LCD_VGG2432A4 is not set
 CONFIG_LIBERTAS_THINFIRM_USB=m
 CONFIG_MACH_EXYNOS5_DT=y
+CONFIG_MACVLAN=y
 # CONFIG_MALI_DEBUG is not set
 # CONFIG_MALI_DEBUG_SHADER_SPLIT_FS is not set
 CONFIG_MALI_EXPERT=y
@@ -208,6 +214,7 @@ CONFIG_NEED_MACH_MEMORY_H=y
 CONFIG_NEED_SG_DMA_LENGTH=y
 CONFIG_NEON=y
 # CONFIG_NET_DMA is not set
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
 CONFIG_NO_IOPORT=y
 CONFIG_NR_CPUS=8
 # CONFIG_OC_ETM is not set
