Remove trailing backslash from COMMIT-QUEUE.ini.
BUG=chromium:233911
TEST=none

Change-Id: I7d38ff9c0cec8ce7ae811b95e143d88ead44c387
Signed-off-by: David James <davidjames@google.com>
Reviewed-on: https://chromium-review.googlesource.com/262876
Commit-Queue: David James <davidjames@chromium.org>
Tested-by: David James <davidjames@chromium.org>
Trybot-Ready: David James <davidjames@chromium.org>
Reviewed-by: Aviv Keshet <akeshet@chromium.org>

--- a/COMMIT-QUEUE.ini
+++ b/COMMIT-QUEUE.ini
@@ -11,6 +11,6 @@
 # daisy: chromeos-exynos5 w/wireless34
 # peach_pit: chromeos-exynos5 w/wireless38
 # gizmo: panther_minimal config
-pre-cq-configs: slippy-pre-cq daisy-no-vmtest-pre-cq \
+pre-cq-configs: slippy-pre-cq daisy-no-vmtest-pre-cq
                 peach_pit-no-vmtest-pre-cq gizmo-no-vmtest-pre-cq
 
