--- a/COMMIT-QUEUE.ini
+++ b/COMMIT-QUEUE.ini
@@ -7,10 +7,10 @@
 
 [GENERAL]
 
-# slippy: chromeos-intel-pineview
+# wolf: chromeos-intel-pineview
 # daisy: chromeos-exynos5 w/wireless34
 # peach_pit: chromeos-exynos5 w/wireless38
 # gizmo: panther_minimal config
-pre-cq-configs: slippy-pre-cq daisy-no-vmtest-pre-cq
+pre-cq-configs: wolf-pre-cq daisy-no-vmtest-pre-cq
                 peach_pit-no-vmtest-pre-cq gizmo-no-vmtest-pre-cq
 
